Fix visibility and none

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -66,7 +66,7 @@
             padding: 0px;
             margin: 0;
             z-index: 10;
-            visibility: hidden;
+            display: none;
             li {
                 .item {
                     display: inline-block;
@@ -98,10 +98,10 @@
             }
             .nav-expand-menu {
                 &.show {
-                    visibility: visible;
+                    display: block;
                 }
                 &.hide {
-                    visibility: hidden;
+                    display: none;
                 }
             }
         }
